[tool.poetry]
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
asyncio = "^3.4.3"
pymongo = "^4.10.1"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"
pytest = "^8.3.3"
pylint = "^3.3.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# black
[tool.black]
line-length = 79


# isort
[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2


[tool.pylint]
ignore = [".git", "__pycache__", ".venv"]
max-line-length = 79
disable = ["C0114", "C0115", "C0116", "W1514", "W3101", "R0903", "C0103"]